# griptoe

./: .gitignore  Cargo.toml  README.md  griptoe
griptoepy/: README.md  __main__.py  cli.py  pyproject.toml
griptoepy/accounts/: accounts.py
rs/cli/: Cargo.toml
rs/cli/src/: config.rs  lib.rs
rs/cli/src/account/: mod.rs  structs.rs  traits.rs  types.rs
rs/cli/src/cmd/: account.rs  keygen.rs  mod.rs
scripts/: build_and_package.sh  build_external_libs.sh  setup_lib.sh  system_setup.sh
