[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "griptoepy"
version = "0.0.1"
authors = [
  { name="zachanon", email="zachanon@gmail.com" },
]
description = "Tools for dealing with lots of different crypto asset ecosystems"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

