[package]
name = "griptoe-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name="main"
path="src/bin/main.rs"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
lazy_static = "1.4.0"
shellexpand = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.38"