[package]
name = "griptoe-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name="main"
path="src/bin/main.rs"

[dependencies]
clap = { version = "4.0.9", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.38"
toml = "0.5"

blake2 = "0.10.4"
hex = "0.4.3"
sha2 = "0.10.5"
tiny-bip39 = "1"
